# qtpy-theme-manager

./: README.md  THEME_MIGRATION.md  pyproject.toml
.github/workflows/: ci.yml
src/qtpy_theme_manager/: __init__.py  _filters.py  main_handler.py  theme_dialog.py  theme_manager.py  theme_selector_dialog.py
tests/: test_smoke.py
